--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Home</title>
+  <title>Catalent</title>
   <meta charset="UTF-8">
   <!-- <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width, initial-scale=1"> -->
