--- a/application/templates/search.html
+++ b/application/templates/search.html
@@ -1,16 +1,18 @@
-<html>
-<head>
-  <title>Search</title>
-  <meta charset="UTF-8">
-  <meta name="robots" content="noindex">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/search.css') }}">
-</head>
-<body>
-    <form>
-        <input type="text" name="s">
-        <input type="submit" class="search" value="Search" formmethod="get">
-      </form>
-</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block content %}
+
+  <form>
+    <div class="form-row align-items-center">
+      <div class="col-sm-3 my-1">
+        <input type="text" class="form-control" id="inlineFormInputName" placeholder="Enter text to seach">
+      </div>
+     
+      <div class="col-auto my-1">
+        <button type="submit" class="btn btn-primary">Search</button>
+      </div>
+    </div>
+  </form>
+{% endblock %}
+
 
