--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -6,16 +6,16 @@
     </button> -->
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item {% if home %} active {% endif %}">
           <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {% if register %} active {% endif %}">
           <a class="nav-link" href="{{ url_for('register') }}">Register</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {% if login %} active {% endif %}">
           <a class="nav-link" href="{{ url_for('login') }}">Login</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {% if about %} active {% endif %}">
           <a class="nav-link " href="about.html">About</a>
         </li>
       </ul>
