--- a/application/templates/search.html
+++ b/application/templates/search.html
@@ -1,18 +1,19 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-
-  <form>
-    <div class="form-row align-items-center">
-      <div class="col-sm-3 my-1">
-        <input type="text" class="form-control" id="inlineFormInputName" placeholder="Enter text to seach">
+  <div class="container">
+    <form action="{{ url_for('search_results') }}" method="POST">
+      <div class="form-row align-items-center">
+        <div class="col-sm-10 my-3">
+          <input type="text" class="form-control" id="searchTerm" name="searchTerm"  placeholder="Enter text to seach">
+        </div>
+       
+        <div class="col-auto my-3">
+          <button type="submit" class="btn btn-primary">Search</button>
+        </div>
       </div>
-     
-      <div class="col-auto my-1">
-        <button type="submit" class="btn btn-primary">Search</button>
-      </div>
-    </div>
-  </form>
+    </form>
+  </div>
 {% endblock %}
 
 
