--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -1,23 +1,45 @@
 {% extends 'layout.html' %}
+
 {% block content %}
-  
+
 <div class="container">
   <h1>Login Page</h1>
-  <form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
+  <form name="login" action="" method="POST">
+    {{ form.hidden_tag() }}
+    <!-- <div class="form-group">
+      <label for="exampleInputEmail1">{{ form.email.label }}</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
+      <label for="exampleInputPassword1">{{ form.password.label }}</label>
       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
     <div class="form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Login</button> -->
+
+    <div class="form-group">
+      {{ form.email.label }}<br>
+      {{ form.email(size=35) }}
+      {% for error in form.email.errors %}
+          <span class="error-message">{{ error }}</span>
+      {% endfor %}
+    </div>
+    
+    <div class="form-group">
+      {{ form.password.label }}<br>
+      {{ form.password(size=15) }}
+      {% for error in form.password.errors %}
+          <span class="error-message">{{ error }}</span>
+      {% endfor %}
+    </div>
+ 
+    <div class="form-check">
+      {{ form.login() }}
+    </div>
+      
   </form>
 </div>
 
