--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -9,15 +9,25 @@
         <li class="nav-item {% if home %} active {% endif %}">
           <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item {% if register %} active {% endif %}">
-          <a class="nav-link" href="{{ url_for('register') }}">Register</a>
-        </li>
-        <li class="nav-item {% if login %} active {% endif %}">
-          <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-        </li>
-        <li class="nav-item {% if about %} active {% endif %}">
+        {% if not session['username'] %}
+          <li class="nav-item {% if register %} active {% endif %}">
+            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+          </li>
+        {% endif %}
+
+        {% if not session['username'] %}
+          <li class="nav-item {% if login %} active {% endif %}">
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          </li>
+        {% else %}
+          <li class="nav-item {% if logout %} active {% endif %}">
+            <a class="nav-link " href="{{ url_for('logout') }}">Logout</a>
+          </li>
+        {% endif %}
+        <!-- <li class="nav-item {% if about %} active {% endif %}">
           <a class="nav-link " href="about.html">About</a>
-        </li>
+        </li> -->
+        
       </ul>
     </div>
   </nav>
