search working using elastic-search and fscrawler

--- a/application/templates/search_results.html
+++ b/application/templates/search_results.html
@@ -1,6 +1,40 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-{{ searchTerm }}
+
+<div class="container">
+    <h3>
+        Results for :
+        <span class="words-results">{{ user_request }}</span> 
+    </h3>  
+
+    <div class="words-results">
+        <table class="table">
+            <thead>
+            <tr>
+            <th>File Name</th>
+            <th>Link</th>
+            <th>Summary</th> 
+            <th>Score</th>
+            </tr>
+            </thead>
+            {% for hit in res['hits']['hits'] %}
+                <tbody>
+                    <tr>
+                    <th scope="row">{{ hit['_source']['file']['filename'] }}</th>
+                    <td><a href="{{ hit['_source']['file']['url'] }}">{{ hit['_source']['file']['filename'] }}</a></td>
+                    <td id="{{loop.index}}" name="goodSummary"> {{ hit['good_summary']}} </td> 
+                    <td>{{ hit['_score'] }}</td>
+                    </tr>
+                </tbody>
+           {% endfor %}
+           </table>
+    </div>
+
+    <center>
+        <br/> <h4>{{ res['hits']['total']['value'] }} results found for <em>"{{res['ST']}}"</em> </h4>
+    </center>   
+</div>
+
 
 {% endblock %}
