temp fix for the pdf open

--- a/application/templates/search_results.html
+++ b/application/templates/search_results.html
@@ -42,7 +42,7 @@
                     <tbody>
                         <tr>
                         <th scope="row">{{ hit['_source']['file']['filename'] }}</th>
-                        <td><a href="{{ hit['_source']['file']['url'] }}" type="application/pdf">{{ hit['_source']['file']['filename'] }}</a></td>
+                        <td><a href="file://D:\Internship-Project\TempProject\sample_pdf_files\{{ hit['_source']['file']['filename'] }}" type="application/pdf" target="_blank">{{ hit['_source']['file']['filename'] }}</a></td>
                         <td id="{{ loop.index }}" name="goodSummary"> {{ hit['good_summary']}} </td> 
                         <!-- <td>{{ hit['_score'] }}</td> -->
                         </tr>
