--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -1,10 +1,13 @@
 <header>   
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffffff;">
     <!-- <a class="navbar-brand" href="#">Catalent</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button> -->
     <div class="collapse navbar-collapse" id="navbarNav">
+      <a class="navbar-brand" href="#">
+        <img src="{{ url_for('static', filename='resources/nav_logo.jpg') }}" style="width:auto; height:auto;  max-height: 72px; max-width: 250px;" alt="">
+      </a>
       <ul class="navbar-nav">
         <li class="nav-item {% if home %} active {% endif %}">
           <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
@@ -31,5 +34,6 @@
       </ul>
     </div>
   </nav>
+  
 </header>
 
