--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -22,12 +22,11 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-<div class="jumbotron-fluid" style="height: 100vh;  margin-bottom: 0px">
-  <div class="container"></div>
+<div class="jumbotron-fluid" >  
+  <!-- style="height: 100vh;  margin-bottom: 0px" -->
     {% block content %}
 
     {% endblock %}
-  </div>
 </div>
 {% include "includes/footer.html" %}
 </body>
