--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
   
     <div class="container">
-        <h1>Registration Page</h1>
+        <!-- <h1>Registration Page</h1> -->
         <!-- <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Username</label>
@@ -69,6 +69,6 @@
                 
             </fieldset>
             </form>
-    </div>
+        </div>
 {% endblock %}
     
