modified UI for each page

--- a/application/static/css/temp.css
+++ b/application/static/css/temp.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
 }
 
@@ -43,14 +43,14 @@ hr {
 input[type=text], input[type=password] {
     width: 50%;
     padding: 7px;
-    /* margin: 5px 0 22px 0; */
+    margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
-    background: #f1f1f1;
+    background: #ffffff;
 }
 
 input[type=text]:focus, input[type=password]:focus {
-    /* width: auto; */
+    width: auto;
     background-color: #ffffff;
     outline: none;
 }
@@ -64,7 +64,7 @@ input[type=text]:focus, input[type=password]:focus {
     background: #333;
     padding:5px;
     border-top:2px solid #0f0f0f;
-    /* position:absolute; */
+    position:absolute;
     bottom:0;
 }
 
@@ -95,8 +95,4 @@ footer {
 }
 .btn-submit:hover {
     opacity: 1;
-}
-
-.error-message {
-    color :red;
-}
+} */
