--- a/application/templates/includes/footer.html
+++ b/application/templates/includes/footer.html
@@ -1,6 +1,5 @@
-<footer id="footer" class="page-footer font-small bg-dark">
-    <div class="footer-copyright text-center py-3 text-white">
-        <p>Copyright &copy;2020-2021. <a href=" {{url_for('home')}} ">Catalent</a>. All rights reserved.   
-        </p>
+<footer id="footer" class="page-footer font-small bg-light text-dark" style="padding: 50px;">
+    <div class="footer-copyright text-center">
+        <p>Copyright &copy;2020-2021. <a href=" {{url_for('home')}} ">Catalent</a>. All rights reserved.</p>
     </div>
 </footer>
