--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -1,8 +1,51 @@
 {% extends 'layout.html' %}
 {% block content %}
-  
-    <div class="container">
-        <!-- <h1>Registration Page</h1> -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">
+                <form name="register" action="" method="post" novalidate>
+                <fieldset class="form-group">    
+                    {{ form.hidden_tag() }}       
+                        <p> {{ form.email.label }}</br>
+                            {{ form.email }}
+                            {% for error in form.email.errors %}
+                             <span class="error-message">{{ error }}</span>
+                            {% endfor %}
+                        </p>
+        
+                        <p> {{ form.retypedEmail.label }}</br>
+                            {{ form.retypedEmail }}
+                            {% for error in form.retypedEmail.errors %}
+                             <span class="error-message">{{ error }}</span>
+                            {% endfor %}
+                        </p>
+                    
+                        <p> {{ form.password.label }}</br>
+                            {{ form.password }}
+                            {% for error in form.password.errors %}
+                             <span class="error-message">{{ error }}</span>
+                            {% endfor %}
+                        </p>
+                    
+                        <p> {{ form.confirmPassword.label }}</br>
+                            {{ form.confirmPassword }}
+                            {% for error in form.confirmPassword.errors %}
+                             <span class="error-message">{{ error }}</span>
+                            {% endfor %}
+                        </p>
+                    
+                        <p> 
+                            {{ form.submit() }}
+                        </p>
+                    
+                </fieldset>
+                </form>
+        </div>
+    </div>   
+</div>
+{% endblock %}
+
+<!-- <h1>Registration Page</h1> -->
         <!-- <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Username</label>
@@ -31,44 +74,21 @@
             <br/>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form> -->
-
-        <form name="register" action="" method="post" novalidate>
-            <fieldset class="form-group">    
-                {{ form.hidden_tag() }}       
-                    <p> {{ form.email.label }}</br>
+    
+<!-- <div class="container" style="background-color: pink;">
+    <div class="row justify-content-md-center" style="background-color: cadetblue;">
+        <div class="col col-lg-2">
+            <form clss="form form-horizontal" name="register" action="" method="post" novalidate>
+                <fieldset class="form-group">
+                        {{ form.hidden_tag() }}       
+                        {{ form.email.label }}
                         {{ form.email }}
                         {% for error in form.email.errors %}
-                         <span class="error-message">{{ error }}</span>
+                        <span class="error-message">{{ error }}</span>
                         {% endfor %}
-                    </p>
-
-                    <p> {{ form.retypedEmail.label }}</br>
-                        {{ form.retypedEmail }}
-                        {% for error in form.retypedEmail.errors %}
-                         <span class="error-message">{{ error }}</span>
-                        {% endfor %}
-                    </p>
-                
-                    <p> {{ form.password.label }}</br>
-                        {{ form.password }}
-                        {% for error in form.password.errors %}
-                         <span class="error-message">{{ error }}</span>
-                        {% endfor %}
-                    </p>
-                
-                    <p> {{ form.confirmPassword.label }}</br>
-                        {{ form.confirmPassword }}
-                        {% for error in form.confirmPassword.errors %}
-                         <span class="error-message">{{ error }}</span>
-                        {% endfor %}
-                    </p>
-                
-                    <p> 
-                        {{ form.register() }}
-                    </p>
-                
-            </fieldset>
-            </form>
+                    </div>
+                </fieldset>
+            </form>           
         </div>
-{% endblock %}
-    
+    </div>
+</div> -->
