--- a/application/templates/user.html
+++ b/application/templates/user.html
@@ -2,7 +2,7 @@
 {% block content %}
   
 <div class="container">
-  <h1>Users Page</h1>
+  <!-- <h1>Users Page</h1>
     <div class="row">
         <div class="col-md-12 text-center">
             
@@ -16,7 +16,65 @@
             <h2>No uers yet !</h2>
             {% endfor %}
         </div>
-    </div>
+    </div> -->
+
+    <form method="POST" action="{{ url_for('login') }}" role="form">
+        {{ form.csrf_token }}
+        <div class="form-group">
+          {{ form.email.label(class_="form-control-label") }}
+          <div class="input-group input-group-merge">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.email(placeholder="name@example.com", class_="form-control") }}
+          </div>
+        </div>
+        <div class="form-group mb-4">
+          <div class="d-flex align-items-center justify-content-between">
+            <div>
+              {{ form.password.label(class_="form-control-label") }}
+            </div>
+            <div class="mb-2">
+              <a href="{{ url_for('public.recover') }}" class="small text-muted text-underline--dashed border-primary">Lost password?</a>
+            </div>
+          </div>
+          <div class="input-group input-group-merge">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-key"></i></span>
+            </div>
+            {{ form.password(placeholder="Password", class_="form-control") }}
+            <div class="input-group-append" onclick="togglePassword()">
+              <span class="input-group-text">
+                <i class="fas fa-eye"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-md-auto mt-1 mb-2" align="center">
+            <button type="submit" class="btn btn-sm btn-primary btn-icon rounded-pill">
+              <span class="btn-inner--text">Sign in</span>
+              <span class="btn-inner--icon"><i class="fas fa-long-arrow-alt-right"></i></span>
+            </button>
+          </div>
+          <div class="col-md-auto text-center mt-2">
+            <p class="text-secondary-dark">or</p>
+            </div>
+          <div class="col-md-auto" align="center">
+            <button type="button" class="btn btn-md btn-secondary btn-icon-only">
+                <span class="btn-inner--icon">
+                    <i class="fab fa-google"></i>
+                </span>
+            </button>
+
+            <button type="button" class="btn btn-md btn-secondary btn-icon-only">
+                <span class="btn-inner--icon">
+                    <i class="fab fa-linkedin"></i>
+                </span>
+            </button>
+          </div>
+        </div>
+      </form>
 
 </div>
 
